--- a/textproc/py-xlsxwriter/Makefile
+++ b/textproc/py-xlsxwriter/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.71 2024/11/11 07:29:11 wiz Exp $
+# $NetBSD: Makefile,v 1.72 2025/01/23 07:26:49 adam Exp $
 
-DISTNAME=	XlsxWriter-3.2.0
+DISTNAME=	XlsxWriter-3.2.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=X/XlsxWriter/}
@@ -13,8 +13,6 @@ LICENSE=	2-clause-bsd
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
