--- a/www/py-hyperframe/Makefile
+++ b/www/py-hyperframe/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2024/11/11 07:29:24 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/23 07:29:57 adam Exp $
 
-DISTNAME=	hyperframe-6.0.1
+DISTNAME=	hyperframe-6.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=h/hyperframe/}
 
@@ -11,11 +10,11 @@ HOMEPAGE=	https://github.com/python-hyper/hyperframe
 COMMENT=	HTTP/2 framing layer for Python
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=75.6.0:../../devel/py-setuptools
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=6.0.0:../../devel/py-test-cov
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist>=3.6.1:../../devel/py-test-xdist
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
