--- a/mail/ruby-actionmailbox80/Makefile
+++ b/mail/ruby-actionmailbox80/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2025/01/02 07:18:09 taca Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/23 08:02:13 wiz Exp $
 
 DISTNAME=	actionmailbox-${RAILS_VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-actionmailbox${RUBY_RAILS}-${RAILS_VERSION}
@@ -16,6 +16,8 @@ USE_LANGUAGES=	# none
 
 RUBY_RAILS_ACCEPTED=	80
 RUBY_RAILS_STRICT_DEP=	yes
+
+RUBY_VERSIONS_INCOMPATIBLE=	31
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
