--- a/comms/hylafax/Makefile
+++ b/comms/hylafax/Makefile
@@ -1,30 +1,28 @@
-# $NetBSD: Makefile,v 1.83 2024/02/12 13:22:25 gdt Exp $
+# $NetBSD: Makefile,v 1.84 2025/01/23 23:41:20 gdt Exp $
 
-# This package has a complicated upstream situation.  One upstream is
-# "hylafax.org"; the last release was 6.0.7 on 2018-09-18.  Another
-# upstream is https://sourceforge.net/projects/hylafax/; the last
-# release is 7.0.7 on 2023-01-23.  Neither is the original HylaFAX.
-# Probably, this package should switch to the sourceforge upstream.
+# This package used to have a complicated upstream situation.  One
+# upstream is "hylafax.org"; the last release was 6.0.7 on 2018-09-18.
+# In 2025, that's ancient and no longer relevant.  The other upstream,
+# using the name HylaFAX+
+# is https://sourceforge.net/projects/hylafax/; the last release is
+# 7.0.10 on 2025-01-23.
 
+# \todo Switch to the sourceforge (Lee Howard <faxguy>) upstream.
 DISTNAME=	hylafax-6.0.7
+#DISTNAME=	hylafax-7.0.10
 PKGREVISION=	3
 CATEGORIES=	comms
 MASTER_SITES=	ftp://ftp.hylafax.org/source/
-# https://sourceforge.net/projects/hylafax/files/hylafax/hylafax-7.0.7.tar.gz/download
+#MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=hylafax/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://www.hylafax.org/
-# https://sourceforge.net/projects/hylafax/
+#HOMEPAGE=	https://sourceforge.net/projects/hylafax/
 COMMENT=	Telecommunication and fax server system
 LICENSE=	sgi-free-software-b-v2.0
 
 CONFLICTS=	hylafax-devel-[0-9]* mgetty-[0-9]*
 DEPENDS+=	mawk>=1.2.2:../../lang/mawk
-
-# http://bugs.hylafax.org/show_bug.cgi?id=1004
-#BROKEN=	requires tiff2ps which is no longer part of tiff
-#
-# For now, a workaround is to build tiff with tiff-unsupported.
 
 BUILD_DEFS+=	FAXUSER FAXGROUP VARBASE
 
