--- a/print/brlaser/Makefile
+++ b/print/brlaser/Makefile
@@ -1,19 +1,20 @@
-# $NetBSD: Makefile,v 1.17 2024/11/14 22:21:22 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2025/01/24 01:01:50 schmonz Exp $
 
-DISTNAME=		brlaser-6.2.6
-PKGREVISION=		5
+DISTNAME=		brlaser-6.2.7
 CATEGORIES=		print
 MASTER_SITES=		${MASTER_SITE_GITHUB:=Owl-Maintain/}
-GITHUB_TAG=		v${PKGVERSION_NOREV}
+GITHUB_TAG=		refs/tags/v${PKGVERSION_NOREV}
 
 MAINTAINER=		schmonz@NetBSD.org
 HOMEPAGE=		https://github.com/Owl-Maintain/brlaser/
 COMMENT=		CUPS driver for Brother laser printers
 LICENSE=		gnu-gpl-v2
 
-USE_CMAKE=		yes
+WRKSRC=			${WRKDIR}/${DISTNAME}
+
 USE_LANGUAGES=		c++
 USE_CXX_FEATURES+=	c++11
 
+.include "../../devel/cmake/build.mk"
 .include "../../print/libcups/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
