--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1056 2025/01/22 12:10:16 wiz Exp $
+# $NetBSD: Makefile,v 1.1057 2025/01/24 11:54:54 wiz Exp $
 #
 
 COMMENT=	Packages to support the X Window System
@@ -349,6 +349,7 @@ SUBDIR+=	qt5-qtvirtualkeyboard
 SUBDIR+=	qt5-qtwayland
 SUBDIR+=	qt5-qtwebchannel
 SUBDIR+=	qt5-qtwebengine
+SUBDIR+=	qt5-qtwebkit
 SUBDIR+=	qt5-qtwebsockets
 SUBDIR+=	qt5-qtx11extras
 SUBDIR+=	qt5-qtxmlpatterns
