--- a/devel/cargo-modules/Makefile
+++ b/devel/cargo-modules/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.35 2024/11/25 14:50:39 pin Exp $
+# $NetBSD: Makefile,v 1.36 2025/01/24 13:30:32 pin Exp $
 
 DISTNAME=	cargo-modules-0.19.1
 # Newer versions require Rust >= 1.82
@@ -6,7 +6,7 @@ CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=regexident/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	pin@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/regexident/cargo-modules/
 COMMENT=	Render your crate's module/item structure as a tree or graph
 LICENSE=	mpl-2.0
