--- a/devel/py-semver/Makefile
+++ b/devel/py-semver/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2024/11/11 07:28:23 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/25 11:14:55 adam Exp $
 
-DISTNAME=	semver-3.0.2
+DISTNAME=	semver-3.0.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-CATEGORIES=	devel
+CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/semver/}
 
 MAINTAINER=	kamelderouiche@yahoo.com
@@ -10,13 +10,14 @@ HOMEPAGE=	https://github.com/python-semver/python-semver
 COMMENT=	Python package to work with Semantic Versioning
 LICENSE=	modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61:../../devel/py-setuptools
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+USE_LANGUAGES=	# none
 
 post-install:
-	${MV} ${DESTDIR}${PREFIX}/bin/pysemver ${DESTDIR}${PREFIX}/bin/pysemver-${PYVERSSUFFIX}
+	cd ${DESTDIR}${PREFIX}/bin && \
+	${MV} pysemver pysemver-${PYVERSSUFFIX} || ${TRUE}
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
