--- a/devel/py-test-doctestplus/Makefile
+++ b/devel/py-test-doctestplus/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2024/11/11 07:28:25 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/25 11:25:22 adam Exp $
 
-DISTNAME=	pytest-doctestplus-1.2.1
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^py//}
+DISTNAME=	pytest_doctestplus-1.4.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^pytest_/test-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest-doctestplus/}
 
@@ -10,9 +10,9 @@ HOMEPAGE=	https://astropy.org/
 COMMENT=	Pytest plugin with advanced doctest features
 LICENSE=	modified-bsd
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=30.3.0:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm-[0-9]*:../../devel/py-setuptools_scm
 DEPENDS+=	${PYPKGPREFIX}-packaging>=17.0:../../devel/py-packaging
-DEPENDS+=	${PYPKGPREFIX}-setuptools>=30.3.0:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-test>=4.6:../../devel/py-test
 TEST_DEPENDS+=	${PYPKGPREFIX}-numpy-[0-9]*:../../math/py-numpy
 TEST_DEPENDS+=	${PYPKGPREFIX}-sphinx-[0-9]*:../../textproc/py-sphinx
