--- a/www/py-test-aiohttp/Makefile
+++ b/www/py-test-aiohttp/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2024/11/11 07:29:27 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/25 11:31:58 adam Exp $
 
-DISTNAME=	pytest-aiohttp-1.0.5
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
+DISTNAME=	pytest_aiohttp-1.1.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pytest_/test-/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest-aiohttp/}
 
@@ -10,15 +10,13 @@ HOMEPAGE=	https://github.com/aio-libs/pytest-aiohttp
 COMMENT=	Pytest plugin for aiohttp support
 LICENSE=	apache-2.0
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm-[0-9]*:../../devel/py-setuptools_scm
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=51.0:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
+DEPENDS+=	${PYPKGPREFIX}-aiohttp>=3.11.0:../../www/py-aiohttp
 DEPENDS+=	${PYPKGPREFIX}-test>=6.1.0:../../devel/py-test
-DEPENDS+=	${PYPKGPREFIX}-aiohttp>=3.8.1:../../www/py-aiohttp
 DEPENDS+=	${PYPKGPREFIX}-test-asyncio>=0.17.2:../../devel/py-test-asyncio
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
