--- a/devel/py-test-textual-snapshot/Makefile
+++ b/devel/py-test-textual-snapshot/Makefile
@@ -1,23 +1,21 @@
-# $NetBSD: Makefile,v 1.3 2025/01/14 09:53:45 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/25 11:36:21 adam Exp $
 
-DISTNAME=	pytest_textual_snapshot-1.0.0
+DISTNAME=	pytest_textual_snapshot-1.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//:S/_/-/g}
-PKGREVISION=	1
-CATEGORIES=	devel
+CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest_textual_snapshot/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://pypi.org/project/pytest-textual-snapshot/
+HOMEPAGE=	https://github.com/Textualize/pytest-textual-snapshot
 COMMENT=	Snapshot testing for Textual apps
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=2.0.1:../../devel/py-poetry-core
-DEPENDS+=	${PYPKGPREFIX}-test>=7.0.0:../../devel/py-test
+TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=1.0.0:../../devel/py-poetry-core
 DEPENDS+=	${PYPKGPREFIX}-jinja2>=3.0.0:../../textproc/py-jinja2
 DEPENDS+=	${PYPKGPREFIX}-rich>=12.0.0:../../comms/py-rich
-# py-textual uses this for testing
+DEPENDS+=	${PYPKGPREFIX}-syrupy>=4.8.0:../../devel/py-syrupy
+DEPENDS+=	${PYPKGPREFIX}-test>=8.0.0:../../devel/py-test
 DEPENDS+=	${PYPKGPREFIX}-textual>=0.28.0:../../comms/py-textual
-DEPENDS+=	${PYPKGPREFIX}-syrupy>=3.0.0:../../devel/py-syrupy
 
 USE_LANGUAGES=	# none
 
